finalize statement reply and reply request

--- a/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
@@ -22,6 +22,9 @@
           <span data-bind="ltext: 'luonnos'">Luonnos</span>
         </span>
       </div>
+      <p id="statement-reply-cover-note">
+        <span data-bind="text: coverNote">Saate</span>
+      </p>
     </div>
 
     <div class="statement-info">
