--- a/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
@@ -22,8 +22,8 @@
           <span data-bind="ltext: 'luonnos'">Luonnos</span>
         </span>
       </div>
-      <p id="statement-covering-note">
-        <span data-bind="text: coveringNote">Saate</span>
+      <p id="statement-cover-note">
+        <span data-bind="text: coverNote">Saate</span>
       </p>
     </div>
 
