--- a/resources/private/ui-components/municipality-maps/municipality-maps-template.html
+++ b/resources/private/ui-components/municipality-maps/municipality-maps-template.html
@@ -3,16 +3,18 @@
   <body>
     <section class="page container">
       <script type="text/x-jquery-tmpl" id="municipality-maps-template">
-        <div>
-          <h2 data-bind="ltext: 'auth-admin.municipality-maps.title'"></h2>
-          <div class="munimaps">
-            <div data-bind="component: {name: 'municipality-maps-server',
-                            params: serverParams}"></div>
-            <div data-bind="component: {name: 'municipality-maps-layers',
-                            params: layersParams}"></div>
-            <div data-bind="component: {name: 'municipality-maps-map',
-                            params: mapParams}"></div>
-          </div>
+        <div class="munimaps">
+          <h2 class="help-adjacent-title"
+              data-bind="ltext: 'auth-admin.municipality-maps.title'"></h2>
+          <span data-bind="component: {
+                           name: 'help-toggle',
+                           params: {lhtml: 'auth-admin.municipality-maps.help'}}"></span>
+          <div data-bind="component: {name: 'municipality-maps-server',
+                          params: serverParams}"></div>
+          <div data-bind="component: {name: 'municipality-maps-layers',
+                          params: layersParams}"></div>
+          <div data-bind="component: {name: 'municipality-maps-map',
+                          params: mapParams}"></div>
         </div>
       </script>
     </section>
