--- a/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
@@ -25,9 +25,12 @@
       <p id="statement-reply-cover-note">
         <span data-bind="text: coverNote">Saate</span>
       </p>
+      <p id="statement-reply-draft-is-not-visible-info" data-bind="visible: !replyVisible()">
+        <span data-bind="ltext: 'statement.reply-draft-not-visible'">Luonnosta ei nayteta</span>
+      </p>
     </div>
 
-    <div class="statement-info">
+    <div class="statement-info" data-bind="visible: replyVisible">
       <form>
         <div class="form-entry">
           <input id="statement-nothing-to-add" 
@@ -39,7 +42,7 @@
             <span data-bind="ltext: 'statement.nothing-to-add.label'">Ei lisattavaa</span>
           </label>
         </div>
-        <div data-bind="visible: !nothingToAdd()">
+        <div data-bind="!nothingToAdd()">
           <label class="form-label" for="statement-text" data-bind="ltext: 'statement.' + tab + '.text'"></label>
           <textarea
             data-bind="attr: {placeholder: loc('statement.' + tab + '.message.placeholder')}, 
