--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -359,7 +359,7 @@
                                     <span data-bind="ltext: 'attachment.tosMetadata'"></span>
                                 </a></li>
 
-                            <li data-bind="if: features.enabled('publish-bulletin') && $root.authorization.ok('publish-bulletin-enabled'),
+                            <li data-bind="if: $root.authorization.ok('publish-bulletin-enabled'),
                                            css: {'active': $parent.selectedTabName() === 'bulletin'}">
                                 <a data-bind="click: changeTab" href="#" data-target="bulletin" data-test-id="application-open-bulletin-tab" class="link-btn">
                                   <span data-bind="ltext: 'bulletin'"></span>
@@ -899,8 +899,8 @@
                     <!-- /ko -->
 
                     <!-- Bulletin tab -->
-                    <!-- ko if: selectedTabName() === 'bulletin' && features.enabled('publish-bulletin') && $root.authorization.ok('publish-bulletin-enabled') -->
-                    <div id="application-bulletin-tab" data-bind="with: application, css: {'feature': features.enabled('publish-bulletin')}" class="tab-content">
+                    <!-- ko if: selectedTabName() === 'bulletin' && $root.authorization.ok('publish-bulletin-enabled') -->
+                    <div id="application-bulletin-tab" data-bind="with: application" class="tab-content">
                         <div data-bind="component: {name: 'bulletin-tab',
                                                     params: {appId: id,
                                                              appState: state,
