remove feature flag from kunta-kuulee-naapurit

--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -18,8 +18,7 @@
         <!-- /ko -->
       </section>
 
-      <!-- ko if: features.enabled('kunta-kuulee-naapurit') -->
-      <section class="feature">
+      <section>
         <h2 data-bind="ltext: 'auth-admin.email-notifications'"></h2>
 
         <table class="admin-settings">
@@ -40,7 +39,6 @@
           </tbody>
         </table>
       </section>
-      <!--  /ko -->
 
     </div> <!-- container -->
   </section>
