relative link to palveluinfo

--- a/resources/private/footer/footer.html
+++ b/resources/private/footer/footer.html
@@ -25,7 +25,7 @@
       <div class="footer-box">
           <ul>
               <li><a href="/ota-yhteytta" target="_blank" data-bind="ltext: 'footer.feedback'" ></a></li>
-              <li><a data-bind="ltext: 'footer.service.info'" href="http://www.lupapiste.fi/palveluinfo"></a></li>
+              <li><a href="/palveluinfo" data-bind="ltext: 'footer.service.info'"></a></li>
               <li><a href="/rekisteriseloste" data-bind="ltext: 'footer.register'"></a></li>
               <li><a href="/kayttoehdot" data-bind="ltext: 'footer.terms'"></a></li>
               <li><a href="/lisenssit" data-bind="ltext: 'footer.license'"></a></li>
