add license to julkipano.fi

--- a/resources/private/bulletins/footer.html
+++ b/resources/private/bulletins/footer.html
@@ -11,6 +11,7 @@
           <li><a data-bind="attr: {href: loc( 'footer.help.href')}, text: loc('footer.help.text')"></a></li>
           <li><a href="/rekisteriseloste" data-bind="ltext: 'footer.register'"></a></li>
           <li><a href="/kayttoehdot" data-bind="ltext: 'footer.terms'"></a></li>
+          <li><a href="/lisenssit" data-bind="ltext: 'footer.license'"></a></li>
         </ul>
       </div>
 
