support for disable is inherited from input-field-model, use it

--- a/resources/private/ui-components/input/select-field-template.html
+++ b/resources/private/ui-components/input/select-field-template.html
@@ -11,6 +11,7 @@
                            optionsValue: optionsValue,
                            optionsCaption: optionsCaption,
                            value: value,
+                           disable: disable,
                            attr: {id: id, name: id}"></select>
       </div>
     </script>
