support disabling password fields

--- a/resources/private/ui-components/input/password-field-template.html
+++ b/resources/private/ui-components/input/password-field-template.html
@@ -6,7 +6,8 @@
       <div class="col--vertical">
         <label data-bind="text: label, attr: {'for': id}, css: {'required': required}"></label>
         <input type="password"
-               data-bind="textInput: value, attr: {placeholder: placeholder, id: id, name: name},
+               data-bind="textInput: value, disable: disable,
+                          attr: {placeholder: placeholder, id: id, name: name},
                           css: qualityStyle()"
                maxlength="255"/>
       </div>
