Handle statement updates via statementService

--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -7,7 +7,7 @@
       <div class="container">
         <a class="btn secondary inline-block"
            data-test-id="statement-return"
-           data-bind="attr: {href: '#!/application/' + $root.applicationId() + (lupapisteApp.models.application.inPostVerdictState() ? '/applicationSummary' : '/statement') }">
+           data-bind="attr: {href: '#!/application/' + $root.service.applicationId() + (lupapisteApp.models.application.inPostVerdictState() ? '/applicationSummary' : '/statement') }">
             <i class="lupicon-chevron-start"></i>
           <span data-bind ="ltext: 'application.return'"></span>
         </a>
@@ -26,38 +26,40 @@
     <div class="container">
       <div id="statement-edit-container">
         <div data-bind="component: { name: 'statement-edit',
-                                     params: { application: $root.application,
-                                               applicationId: $root.applicationId,
-                                               statementId: $root.statementId,
-                                               authModel: $root.authorization } },
+                                     params: { applicationTitle: $root.service.applicationTitle,
+                                               applicationId: $root.service.applicationId,
+                                               data: $root.service.data,
+                                               commands: $root.service.commands['statement'],
+                                               authModel: $root.authModel } },
                         visible: $root.selectedTab() === 'statement'"></div>
         <div data-bind="component: { name: 'statement-reply-request',
-                                     params: { application: $root.application,
-                                               applicationId: $root.applicationId,
-                                               statementId: $root.statementId,
-                                               authModel: $root.authorization} },
+                                     params: { applicationTitle: $root.service.applicationTitle,
+                                               data: $root.service.data,
+                                               commands: $root.service.commands['reply-request'],
+                                               authModel: $root.authModel } },
                         visible: $root.selectedTab() === 'reply-request'"></div> 
         <div data-bind="component: { name: 'statement-edit-reply',
-                                     params: { application: $root.application,
-                                               applicationId: $root.applicationId,
-                                               statementId: $root.statementId,
-                                               authModel: $root.authorization} },
+                                     params: { applicationTitle: $root.service.applicationTitle,
+                                               data: $root.service.data,
+                                               commands: $root.service.commands['reply'],
+                                               authModel: $root.authModel } },
                         visible: $root.selectedTab() === 'reply'"></div> 
       </div>
       <div id="statement-attachments-container">
         <div data-bind="component: { name: 'statement-attachments',
-                                     params: { application: $root.application,
-                                               applicationId: $root.applicationId,
-                                               statementId: $root.statementId,
-                                               authModel: $root.authorization,
+                                     params: { applicationId: $root.service.applicationId,
+                                               statementId: $root.service.statementId,
+                                               application: application,
+                                               authModel: $root.authModel,
                                                selectedTab: $root.selectedTab } }"></div> 
       </div>
       <div id="statement-control-button-container">
         <div data-bind="component: { name: 'statement-control-buttons',
-                                     params: { applicationId: $root.applicationId,
-                                               statementId: $root.statementId,
-                                               authModel: $root.authorization,
-                                               submitAllowed: $root.submitAllowed,
+                                     params: { applicationId: $root.service.applicationId,
+                                               statementId: $root.service.statementId,
+                                               authModel: $root.authModel,
+                                               submitAllowed: $root.service.submitAllowed,
+                                               commands: $root.service.commands,
                                                selectedTab: $root.selectedTab } }"></div> 
       </div>
     </div>
