--- a/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
@@ -10,8 +10,8 @@
           <span>
             <span data-bind="ltext: 'statement.tab.' + tab"></span>:
           </span>
-          <span data-bind="with: application">
-            <span data-bind="text: title"></span>
+          <span>
+            <span data-bind="text: applicationTitle"></span>
           </span>
           <span data-bind="with: data">
             (<span data-bind="text: person.text"></span>)
