--- a/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
@@ -10,8 +10,8 @@
           <span>
             <span data-bind="ltext: 'statement.tab.' + tab"></span>:
           </span>
-          <span data-bind="with: application">
-            <span data-bind="text: title"></span>
+          <span>
+            <span data-bind="text: applicationTitle"></span>
           </span>
           <span data-bind="with: data">
             (<span data-bind="text: person.text"></span>)
@@ -47,7 +47,7 @@
             data-bind="attr: {placeholder: loc('statement.' + tab + '.message.placeholder')}, 
                        textInput: text, 
                        readonly: !enabled()"
-            id="statement-text"
+            id="statement-reply-text"
             rows="15">
           </textarea>
         </div>
